--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "vuepress": "^1.5.3"
+    "vuepress": "^1.5.3",
+    "is-svg": "^4.2.2",
+    "ssri": "^8.0.1"
   }
 }
